<resources>
    <string name="app_name">Cininfo - Новинки и хиты кино</string>
    <string name="freshText">Свежее</string>
    <string name="popularText">Популярное</string>
    <string name="film_image">Film image</string>
    <string name="search_hint">Поиск</string>
    <string name="more_hint">Меню</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snack_bar_error_text">Error</string>
    <string name="snack_bar_text">Error!</string>
    <string name="snack_bar_action_text">Reload</string>
    <string name="snack_bar_success_text">Success!</string>
    <string name="search_input_text">Введите название фильма для поиска</string>
    <string name="last_searches_text">Предыдущие запросы</string>
    <string name="search_button_description">search button</string>
    <string name="adult_include">включить в поиск \"взрослый\" контент</string>
    <string name="empty_edit_text_error">Поле поиска не заполнено</string>
    <string name="search_text_title">Поисковый запрос</string>
    <string name="enter_note">Оставить заметку</string>
    <string name="save_note">Сохранить</string>
    <string name="title_note">Моя заметка</string>
    <string name="nothing_to_save">Нечего сохранять</string>
    <string name="contacts_list">Контакты</string>
    <string name="need_permission_to_read_contacts">Требуется разрешение для чтения контактов</string>
    <string name="name_and_phone_contact">%1$s, %n %2$s</string>
    <string name="view_story">История просмотров</string>
    <string name="view_history_watches_item">%1$s%nДата посещения: %2$s%nВремя просмотра: %3$d мин.%nЗаметка: %4$s</string>
    <string name="filter_input">Введите название фильма</string>
    <string name="title_filtration_text">Введите имя фильма</string>
    <string name="filter_ok_button">Фильтровать</string>
    <string name="empty_filter_edit_text_error">Не введено название фильма</string>
    <string name="filter_title_result">Фильтр по названию: %1$s</string>

    <string name="build_version">Текущая версия: %1s</string>
    <string name="hello">Hello, release!</string>
    <!-- Геолокация ресурсы -->
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_cinema">Кинотеатры поблизости</string>
    <string name="open_map">Карта</string>
    <string name="google_map_api_key" translatable="false">AIzaSyB8QNZMjH8W__pVwlgbZgMZ1yABN_N2e_o</string>
    <string name="map">Карта</string>
    <string name="map_mode">Режим карты</string>
    <string name="normal">Нормальный</string>
    <string name="satellites">Спутники</string>
    <string name="terrain">Схема</string>
    <string name="traffic">Трафик</string>
    <string name="enter_query">Введите запрос</string>
    <string name="search">Поиск</string>
    <string name="start_marker">Старт</string>
    <string name="entered_in_geofence">Вы вошли в зону кинотеатра</string>
</resources>