<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more_hint"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/contacts_list"
                android:icon="@drawable/ic_baseline_contact_page_24"
                android:title="@string/contacts_list"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/view_story"
                android:icon="@drawable/ic_baseline_history_edu_24"
                android:title="@string/view_story"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/open_map"
                android:icon="@drawable/ic_baseline_map_24"
                android:title="@string/open_map"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

</menu>