<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.FilmSearchFragment">

    <TextView
        android:id="@+id/search_input_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/outerRViewMargin"
        android:labelFor="@id/search_edit_text"
        android:text="@string/search_input_text"
        android:textSize="@dimen/search_label_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/outerRViewMargin"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input_text" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_button"
        app:layout_constraintStart_toEndOf="@id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input_text"
        android:layout_marginEnd="@dimen/outerRViewMargin"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
        android:src="@drawable/ic_baseline_search_24"
        android:contentDescription="@string/search_button_description" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        android:layout_marginHorizontal="@dimen/outerRViewMargin"
        android:text="@string/adult_include"
        android:id="@+id/adult_checkbox" />

    <TextView
        android:id="@+id/last_searches_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/outerRViewMargin"
        android:layout_marginTop="@dimen/listFilmsTopMargin"
        android:text="@string/last_searches_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adult_checkbox" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_searches_text">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_previous_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/outerRViewMargin"
            tools:listitem="@layout/previous_search_item" />

        <FrameLayout
            android:id="@+id/loadingLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading_background"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/listFilmsTopMargin"/>

        </FrameLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>